Fix commit name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="titolo">
-        <h1>Indovina il numero</h1>
+        <h1>Indovina il numero!!</h1>
     </div> <br>
     <div class="divNumero">
         <form action="./indovina.php" method="get">
